--- a/MLone/Info.plist
+++ b/MLone/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Additional message here</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>May I access Album 2019</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
